# libsqlora8

./: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.start  NEWS  NEWS-2.2  README.md  acinclude.m4  aclibsqlora8.m4  aclocal.m4  acoracle.m4  config.h.in  configure  configure.in  libsqlora8-config.h.in  libsqlora8-config.in  libsqlora8-uninstalled.pc.in  libsqlora8.pc.in  libsqlora8.spec.in  makerpm.sh  sqlora.c  sqlora.h  sqlora_compat.c  testlora.c
contrib/: Makefile.am  Makefile.in  README  gentoo.tgz
doc/: Doxyfile.in  Makefile.am  Makefile.in  examples.doc
doc/html/: Makefile.am  Makefile.in  deprecated.html  ex10_8c-example.html  ex11_8c-example.html  ex12_8c-example.html  ex13_8c-example.html  ex14_8c-example.html  ex15_8c-example.html  ex16_8c-example.html  ex17_8c-example.html  ex18_8c-example.html  ex19_8c-example.html  ex1_8c-example.html  ex20_8c-example.html  ex2_8c-example.html  ex3_8c-example.html  ex4_8c-example.html  ex5_8c-example.html  ex6_8c-example.html  ex7_8c-example.html  ex8_8c-example.html  ex9_8c-example.html  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  group__complex.html  group__constants.html  group__easy.html  group__env.html  group__error.html  group__exvars.html  group__init.html  (+10 more)
examples/: Makefile  Makefile.am  Makefile.in  error_exit.c  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex13b.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex2.c  ex20.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  examples.c  examples.h
windows/: Makefile.am  Makefile.in  libsqlora8.def  readmewin.euc  readmewin.sjis
windows/msvc+mingw/: Makefile.am  Makefile.in  Makefile.msvc  README  sqlora8.def
